update: add check exists user by id token
