# api/handler/user/dto.go
@@ -9,3 +9,11 @@ type CreateUserRequest struct {
 	Username string `json:"username"`
 	IdToken  string `json:"idToken"`
 } // @name CreateUserRequest
+
+type CheckUserByIdTokenRequest struct {
+	IdToken string `json:"idToken"`
+} // @name CheckUserByIdTokenRequest
+
+type CheckUserByIdTokenResponse struct {
+	Exist bool `json:"exist"`
+} // @name CheckUserByIdTokenResponse
